[package]
name = "audio-lib-part"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive", "env"] }
ebur128 = "0.1.8"
globset = "0.4.14"
symphonia = { version = "0.5.3", features = ["mp3"] }
walkdir = "2.4.0"
